ChennaSalesForce/src/objects/Candidate__c.object
<CustomObject>
    <customHelpPage>Job_Candidate_Help</customHelpPage>
    <fields>
        <fullName>Cadidate_Record_Type__c</fullName>
        <label>Cadidate Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Developers</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Designers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testers</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospect_Rating__c</fullName>
        <description>Indicates how closely a candidate fits the position applied to</description>
        <inlineHelpText>How well does this candidate fit the job description</inlineHelpText>
        <label>Prospect Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Favorite</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample123__c</fullName>
        <label>Sample123</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample1__c</fullName>
        <globalPicklist>Sample_Global_pickList</globalPicklist>
        <label>Sample1</label>
        <type>Picklist</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <recordTypes>
        <fullName>Developers</fullName>
        <active>true</active>
        <label>Developers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sample2</fullName>
        <active>true</active>
        <label>Sample2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sample3</fullName>
        <active>true</active>
        <label>Sample3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Testers</fullName>
        <active>true</active>
        <label>Testers</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>